--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -21,9 +21,8 @@
             <img src="HeadnFooter/menu.png" alt="">
           </div>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#connects">Sermons</a></li>
-          <li><a href="#equipping">Equipping</a></li>
-          <li><a href="#media">Media</a></li>
+          <li><a href="#aboutus">About Us</a></li>
+          <li><a href="#sermons">Sermons</a></li>
           <li><a href="PrayerRequest.html">Prayer Request</a></li>
           <li><a href="Announcement.html">Announcements</a></li>
         </ul>
@@ -34,6 +33,7 @@
     </nav>
   </section>
 
+<section id="aboutus">
   <div class="banner">
     <p id="noice">Connects</p>
     <h1>Sunday School</h1>
@@ -41,18 +41,19 @@
 
   <div class="container">
     <h1>Welcome to our Sunday School!</h1>
-    <p>Our Sunday Worship Service or also known as Sunday School is a time for our church community to come together to celebrate God's love and grace. We gather each week to sing hymns and worship songs, pray together, hear a relevant and inspiring message from the Bible, and participate in communion.</p>
+    <p>Our Sunday School is a time for our church community to come together to celebrate God's love and grace. We gather each week to sing hymns and worship songs, pray together, hear a relevant and inspiring message from the Bible, and participate in communion.</p>
+    <p id="shim">Our worship services are designed to be welcoming and inclusive, and all are invited to join us regardless of background or experience with church. We strive to create a warm and friendly atmosphere where everyone feels valued and loved.</p>
+    <p id="shim">We would be honored to have you join us for our Sunday Worship Service and hope that you will find encouragement, inspiration, and community as we come together to worship God.</p>
   </div>
 
   <div class="containerImg">
     <h3>This year's theme</h3>
     <img src="SundaySchooltings/pressingAhead.jpg" alt="">
+    <h1>"Continue to move forward in one's faith journey, regardless of the obstacles or challenges that may arise."</h1>
   </div>
+</section>
 
-  <div class="desc">
-    <h1></h1>
-  </div>
-
+<section id="sermons">
   <div class="words1">
     <h1>Sermons</h1>
   </div>
@@ -69,37 +70,39 @@
       <div class="scroll">
 
         <div class="img1">
+          <a href="Archive1.html">
           <div class="innerimg1">
-            <h2>Sunday School</h2>
-            <p>March 5,2023</p>
+            <h2>Tithes and Offering</h2>
+            <p>March 5, 2023</p>
+          </div>
+          </a>
+        </div>
+
+        <div class="img1">
+          <div class="innerimg1">
+            <h2>Salvation</h2>
+            <p>February 26, 2023</p>
           </div>
         </div>
 
         <div class="img1">
           <div class="innerimg1">
-            <h2>Sunday School</h2>
-            <p>February 26,2023</p>
+            <h2>Sinners</h2>
+            <p>February 19, 2023</p>
           </div>
         </div>
 
         <div class="img1">
           <div class="innerimg1">
-            <h2>Sunday School</h2>
-            <p>February 19,2023</p>
+            <h2>Miracles in life</h2>
+            <p>February 12, 2023</p>
           </div>
         </div>
 
         <div class="img1">
           <div class="innerimg1">
-            <h2>Sunday School</h2>
-            <p>February 12,20233</p>
-          </div>
-        </div>
-
-        <div class="img1">
-          <div class="innerimg1">
-            <h2>Sunday School</h2>
-            <p>February 5,2023</p>
+            <h2>Spiritual Healing</h2>
+            <p>February 5, 2023</p>
           </div>
         </div>
       </div>
@@ -107,21 +110,36 @@
 
   </div>
 
-  <div class="words1">
+  <div class="words">
     <h1>Past Sermons</h1>
   </div>
 
   <div class="bruh">
-    <div class="noice">Item 1</div>
-    <div class="noice">Item 2</div>
-    <div class="noice">Item 3</div>
-    <div class="noice">Item 4</div>
-    <div class="noice">Item 5</div>
-    <div class="noice">Item 6</div>
-    <div class="noice">Item 7</div>
-    <div class="noice">Item 8</div>
+    <a href="Archive1.html">
+    <div class="noice">
+      <h1>Tithes and Offering</h1>
+    </div>
+    </a>
+    <div class="noice">
+      <h1>Salvation</h1>
+    </div>
+    <div class="noice">
+      <h1>Sinners</h1>
+    </div>
+    <div class="noice">
+      <h1>Miracles in Life</h1>
+    </div>
+    <div class="noice">
+      <h1>Spiritual Healing</h1>
+    </div>
   </div>
+</section>
 
+<section class="">
+  <div>
+    <h1>Come and join us</h1>
+  </div>
+</section>
 
 </body>
 </html>
