Complete Sunday School
Noice

--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -23,6 +23,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="#aboutus">About Us</a></li>
           <li><a href="#sermons">Sermons</a></li>
+          <li><a href="#subscribe">Subscribe</a></li>
           <li><a href="PrayerRequest.html">Prayer Request</a></li>
           <li><a href="Announcement.html">Announcements</a></li>
         </ul>
@@ -75,35 +76,43 @@
             <h2>Tithes and Offering</h2>
             <p>March 5, 2023</p>
           </div>
-          </a>
+          <a href="Archive1.html">
         </div>
 
         <div class="img1">
+          <a href="Archive2.html">
           <div class="innerimg1">
             <h2>Salvation</h2>
             <p>February 26, 2023</p>
           </div>
+          </a>
         </div>
 
         <div class="img1">
+          <a href="Archive3.html">
           <div class="innerimg1">
             <h2>Sinners</h2>
             <p>February 19, 2023</p>
           </div>
+          </a>
         </div>
 
         <div class="img1">
+          <a href="Archive4.html">
           <div class="innerimg1">
             <h2>Miracles in life</h2>
             <p>February 12, 2023</p>
           </div>
+          </a>
         </div>
 
         <div class="img1">
+          <a href="Archive4.html"></a>
           <div class="innerimg1">
-            <h2>Spiritual Healing</h2>
+            <h2>Guard your Heart</h2>
             <p>February 5, 2023</p>
           </div>
+          </a>
         </div>
       </div>
     </div>
@@ -115,30 +124,70 @@
   </div>
 
   <div class="bruh">
+
     <a href="Archive1.html">
     <div class="noice">
       <h1>Tithes and Offering</h1>
     </div>
     </a>
+
+    <a href="Archive2.html">
     <div class="noice">
       <h1>Salvation</h1>
     </div>
+    </a>
+
+    <a href="Archive3.html">
     <div class="noice">
       <h1>Sinners</h1>
     </div>
+    </a>
+
+    <a href="Archive4.html">
     <div class="noice">
       <h1>Miracles in Life</h1>
     </div>
+    </a>
+
+    <a href="Archive5.html">
     <div class="noice">
-      <h1>Spiritual Healing</h1>
+      <h1>Guard your Heart</h1>
     </div>
+    </a>
   </div>
+    
 </section>
 
-<section class="">
-  <div>
-    <h1>Come and join us</h1>
+<section id="subscribe">
+
+  <div class="subs">
+    <img src="SundaySchooltings/Subs.jpg" alt="">
+    <div class="sText">
+      <h1>Be Notified</h1>
+      <p>We are thrilled to invite you to subscribe to our church website in order to stay informed of all upcoming events, announcements, and notifications. Our website is the go-to source for all things related to our church, and we want to make sure that you never miss out on any important information.</p>
+      <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
   </div>
+
+</section>
+
+<section id="pandA">
+    
+  <div class="pandA">
+
+    <div class="prayerReq">
+      <h1>Prayer Request</h1>
+      <p>Prayer is an important part of our faith journey, and we believe that God hears and answers our prayers. If you have a specific prayer request, we would be honored to pray with you and for you.</p>
+      <button class="button"><span><h1>Pray with us </h1></span></button>
+    </div>
+
+    <div class="announcement">
+      <h1>Announcement</h1>
+      <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
+      <button class="button"><span><h1>Be updated </h1></span></button>
+    </div>
+
+  </div>
+
 </section>
 
 </body>
