--- a/J12Kids.html
+++ b/J12Kids.html
@@ -5,111 +5,212 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="j12.css">
-    <script defer src="sundayService.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
-    </style>
-    <title>J12 Kids</title>
+    <script defer src="j12kids.js"></script>
+    <title>Sunday Service</title>
 </head>
 <body>
-    <div class="bgweb">
-        <div class="topbar">
-            <a href="index.html">
-                <img src="HeadnFooter/logo.png" alt="">
-            </a>
-        </div>
-        <div class="webName hidden1">
-            <h1>J12 Kids Service</h1>
-            <h2 class = "hidden1">@ 9 AM at Colegio de Amore</h2>
-        </div>
-    </div>
 
-    <div class="webContent hidden">
+  <section id="home">
+    <nav class="navbar">
+      <div class="content">
+        <div class="logo">
+          <img src="HeadnFooter/logo.png" alt="">
+        </div>
+        <ul class="menu-list">
+          <div class="icon cancel-btn">
+            <img src="HeadnFooter/menu.png" alt="">
+          </div>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#aboutus">About Us</a></li>
+          <li><a href="#sermons">Sermons</a></li>
+          <li><a href="#subscribe">Subscribe</a></li>
+          <li><a href="PrayerRequest.html">Prayer Request</a></li>
+          <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <img src="HeadnFooter/menu.png" alt="">
+        </div>
+      </div>
+    </nav>
+  </section>
+
+  <div class="banner">
+    <p id="noice">Connects</p>
+    <h1>J12 Kids</h1>
+  </div>
+
+<section id="aboutus">
+    <div class="webContent">
         <div class="intro">
             <h1>Come Learn and Play!</h1>
         </div>
         <div class="thingsTodo">
-            <div class="play hidden">
+            <div class="learn ">
                 <img src="J12KidsIMGs/plating.jpg" alt="">
-                <div class="playInfo">
+                <div class="learnInfo">
                     <h1>Play</h1>
                     <p>Play with your fellow Christian kids while learning the Word of God!!! </p>
                 </div>
             </div>
-            <div class="learn hidden">
+            <div class="learn">
                 <img src="J12KidsIMGs/learn.png" alt="">
                 <div class="learnInfo">
                     <h1>Learn</h1>
                     <p>Spending time in the word teaches children about God's character and communicates His deep love for them. </p>
                 </div>
             </div>
-            <div class="praise hidden">
+            <div class="learn">
                 <img src="J12KidsIMGs/praise.jpg" alt="">
-                <div class="praiseInfo">
+                <div class="learnInfo">
                     <h1>Praise</h1>
                     <p>Sing and Praise our Lord Almighty God for He is merciful and good to us! </p>
                 </div>
             </div>
         </div>
     </div>
+</section>
 
-    <div class="teachers hidden1">
+    <div class="teachers ">
         <div class = "meet">
             <h1>Meet our Teachers!</h1>
         </div>
         <div class="advisers">
             <div class="rowOne">
-                <div class="itemOne hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemOnetext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
-                <div class="itemTwo hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemTwotext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
-                <div class="itemThree hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemThreetext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
-                <div class="itemFour hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemFourtext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
             </div>
             <div class="rowTwo">
-                <div class="itemOne hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemOnetext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
-                <div class="itemTwo hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemTwotext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
-                <div class="itemThree hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemThreetext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
-                <div class="itemFour hidden1">
-                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                <div class="itemOne">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
                     <div class="itemFourtext">
-                        <p>Teacher Spike</p>
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
                     </div>
                 </div>
             </div>
+        </div>  
+    </div>
+
+    <div class="teachers2 ">
+        <div class = "meet">
+            <h1>Meet our Teachers!</h1>
+        </div>
+        <div class="advisers">
+            <div class="rowOne">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemOnetext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemTwotext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="rowOne">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemOnetext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemTwotext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="rowOne">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemOnetext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+                <div class="itemOne">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemTwotext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="rowOne">
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemOnetext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+                <div class="itemOne ">
+                    <img src="J12KidsIMGs/Spike.png" alt="">
+                    <div class="itemTwotext">
+                        <p>Spike Spiegel</p>
+                        <p id="breh">Teacher</p>
+                    </div>
+                </div>
+            </div>
+
         </div>  
     </div>
 
