--- a/Spearhead.html
+++ b/Spearhead.html
@@ -5,27 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Spearhead.css">
-    <script defer src="sundayService.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
-    </style>
+    <script defer src="spearhead.js"></script>
     <title>Spearhead</title>
 </head>
 <body>
-    <div class="bgweb">
-        <div class="topbar">
+
+  <section id="home">
+    <nav class="navbar">
+      <div class="content">
+        <div class="logo">
             <a href="index.html">
-                <img src="HeadnFooter/logo.png" alt="">
+            <img src="HeadnFooter/logo.png" alt="">
             </a>
         </div>
-        <div class="webName hidden1">
-            <h1>Spearhead</h1>
-            <h2 class = "hidden1"> 2nd and last Fridays, 7:00 pm</h2>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+            </div>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#aboutus">About Us</a></li>
+                <li><a href="#sermons">Teachers</a></li>
+                <li><a href="#stories">Stories</a></li>
+                <li><a href="PrayerRequest.html">Prayer Request</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <img src="HeadnFooter/menu.png" alt="">
         </div>
-    </div>
+      </div>
+    </nav>
+  </section>
+
+  <div class="banner">
+    <p id="noice">Connects</p>
+    <h1>Spearhead</h1>
+  </div>
 
     <div class="spearheadInfo">
-        <div class="introInfo hidden1">
+        <div class="introInfo">
             <h1>What is Spearhead?</h1>
             <p>is a community of working singles who are commited to sharing the gospel of Jesus</p>
             <p id="info2">We help our adults and young adults to be hardworking in life to reach their dreams but also help them understand and align their faith to our Lord.</p>
@@ -35,26 +52,26 @@
         </div>
     </div>
 .
-    <div class="webContent hidden">
+    <div class="webContent">
         <div class="intro">
             <h1>What do we do in Spearhead?</h1>
         </div>
         <div class="spearheadActivities">
-            <div class="testimony hidden">
+            <div class="testimony ">
                 <img src="SpearheadIMGs/purposeImg.jpg" alt="">
                 <div class="testimonyInfo">
                     <h1>Share Testimony</h1>
                     <p>Sharing your testimony is equal to showing our God's mercy and miracles that happened in your life</p>
                 </div>
             </div>
-            <div class="lifea hidden">
+            <div class="lifea ">
                 <img src="HomeIMGs/visionImg.jpg" alt="">
                 <div class="lifeaInfo">
                     <h1>Life Advices</h1>
                     <p>Help each other member by giving life advices to each other!</p>
                 </div>
             </div>
-            <div class="fellow hidden">
+            <div class="fellow ">
                 <img src="SpearheadIMGs/fellow.jpg" alt="">
                 <div class="fellowInfo">
                     <h1>Fellowship</h1>
