--- a/Spearhead.html
+++ b/Spearhead.html
@@ -41,84 +41,29 @@
     <h1>Spearhead</h1>
   </div>
 
-    <div class="spearheadInfo">
-        <div class="introInfo">
-            <h1>What is Spearhead?</h1>
-            <p>is a community of working singles who are commited to sharing the gospel of Jesus</p>
-            <p id="info2">We help our adults and young adults to be hardworking in life to reach their dreams but also help them understand and align their faith to our Lord.</p>
-        </div>
-        <div class="introImg hidden1">
-            <img src="SpearheadIMGs/spearhead.jpg" alt="">
-        </div>
-    </div>
-.
-    <div class="webContent">
-        <div class="intro">
-            <h1>What do we do in Spearhead?</h1>
-        </div>
-        <div class="spearheadActivities">
-            <div class="testimony ">
-                <img src="SpearheadIMGs/purposeImg.jpg" alt="">
-                <div class="testimonyInfo">
-                    <h1>Share Testimony</h1>
-                    <p>Sharing your testimony is equal to showing our God's mercy and miracles that happened in your life</p>
-                </div>
-            </div>
-            <div class="lifea ">
-                <img src="HomeIMGs/visionImg.jpg" alt="">
-                <div class="lifeaInfo">
-                    <h1>Life Advices</h1>
-                    <p>Help each other member by giving life advices to each other!</p>
-                </div>
-            </div>
-            <div class="fellow ">
-                <img src="SpearheadIMGs/fellow.jpg" alt="">
-                <div class="fellowInfo">
-                    <h1>Fellowship</h1>
-                    <p>Have a break from your work and have fun with our members in Christ!</p>
-                </div>
-            </div>
-        </div>
+  <div class="container">
+    <h1>"Working season is not an obligation but a fulfilment of our life mission"</h1>
+    <p>Spearhead is an Adult Professional Ministry on our church designed to meet the unique spiritual and practical needs of working adults in the congregation. These individuals may be professionals in their fields or simply those who work outside the home and desire fellowship with others who are in a similar stage of life.</p>
+  </div>
+  
+  <div class="container1">
+
+    <div class="mvg">
+        <h1>Mission</h1>
+        <p>Spearhead's mission is to help members thrive in all areas of life, both personally and professionally, and to empower them to live out their faith in meaningful ways in the world around them.</p>
     </div>
 
-    <div class="announce1">
-        <div class="announcement">
-          <h1>What's New?</h1>
-          <p>Check us here for any new updates and news about Spearhead!</p>
-          <a href="Announcement.html">
-          <div class="btn">
-            <button>Check us out</button>
-          </div>
-            </a>
-        </div>
-        <div class="announceImg">
-          <img src="HomeImgs/goalsImg.jpg" alt="">
-        </div>
-      </div>
-
-    <div class="bgbackground">
-      <div class="bottomLinks">
-        <div class="demnSon">
-            <h1>JGLWHM</h1>
-            <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
-            <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
-            <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
-        </div>
-        <!-- <div class="bottomForm">
-            <h1>Notification Form</h1>
-            <p>Be notified if there are any new news about Spearhead!</p>
-            <form action="bottomForm">
-                <label for="">Name:</label><br>
-                <input type="text"><br>
-                <label for="">Email</label><br>
-                <input type="text"><br>
-                <label for="">Contact No.</label><br>
-                <input type="text">
-                <button>Submit</button>
-            </form>
-        </div> -->
-      </div>
+    <div class="mvg">
+        <h1>Vision</h1>
+        <p>Our vision is to  create a vibrant and dynamic community of working adults who are living out their faith in every area of their lives. This ministry seeks to equip and empower members to be leaders in their workplaces and communities, using their skills and talents to make a positive impact and to share the love of Christ with those around them.</p>
     </div>
+    
+    <div class="mvg">
+        <h1>Goals</h1>
+        <p>The Goal of Spearhead is to help working adults become fully devoted followers of Christ who are living out their faith in every area of their lives, including their work, family, and community.</p>
+    </div>
+
+  </div>
 
 </body>
 </html>
