--- a/J12Kids.html
+++ b/J12Kids.html
@@ -289,7 +289,7 @@
           <p>We are thrilled to invite you to subscribe to our church website in order to stay informed of all upcoming events, announcements, and notifications. Our website is the go-to source for all things related to our church, and we want to make sure that you never miss out on any important information.</p>
           <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
       </div>
-
+    </div>
     
 
     
