--- a/Wildfire.html
+++ b/Wildfire.html
@@ -24,9 +24,8 @@
             </div>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
-                <li><a href="#sermons">Cell Leaders</a></li>
-                <li><a href="#blogss">Blogs</a></li>
-                <li><a href="PrayerRequest.html">Subscribe</a></li>
+                <li><a href="#blogs">Blogs</a></li>
+                <li><a href="#subscribe">Subscribe</a></li>
                 <li><a href="Announcement.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
@@ -36,6 +35,7 @@
     </nav>
   </section>
 
+<section id="aboutus">
   <div class="banner">
     <p id="noice">Connects</p>
     <h1>Wildfire</h1>
@@ -59,6 +59,7 @@
                 <h1>Wildfire Trailer</h1>
             </div>
         </div>
+</section>
 
 <section id="blogs">
         <div class="desc">
@@ -78,22 +79,28 @@
             </div>
             <div class="column2">
                 <div class="blog">
+                    <a href="fireBlogs2.html">
                     <div class="blogInfo">
                         <h1>Relationship to God</h1>
                         <p>How can we strengthen our relationship with God?</p>
                     </div>
+                    </a>
                 </div>
                 <div class="blog2">
+                    <a href="fireBlogs3.html">
                     <div class="blogInfo">
                         <h1>Resilience</h1>
                         <p>Developing Resilience</p>
                     </div>
+                    </a>
                 </div>
                 <div class="blog3">
+                    <a href="fireBlogs4.html">
                     <div class="blogInfo">
-                        <h1>How hard is is to forgive?</h1>
+                        <h1>How hard it is to forgive?</h1>
                         <p>Practicing Forgiveness</p>
                     </div>
+                    </a>
                 </div>
             </div>
             
@@ -118,6 +125,7 @@
             </div>
         </div>
 
+<section id="subscribe">
         <div class="subs">
             <img src="SundaySchooltings/Subs.jpg" alt="">
             <div class="sText">
@@ -126,9 +134,7 @@
               <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
           </div>
         </div>
-        
-
-
+</section>
 
     </body>
 </html>
