--- a/Married4Life.html
+++ b/Married4Life.html
@@ -60,7 +60,7 @@
         <div class="blogs">
             <div class="column">
                 <div class="blog">
-                    <a href="fireBlogs1.html">
+                    <a href="MLblog1.html">
                     <div class="blogInfo">
                         <h1>God's Plan for Marriage</h1>
                         <p>Understanding His Design and Purpose for Your Relationship</p>
@@ -70,7 +70,7 @@
             </div>
             <div class="column2">
                 <div class="blog">
-                    <a href="fireBlogs2.html">
+                    <a href="MLblog2.html">
                     <div class="blogInfo">
                         <h1>Resolving Conflict</h1>
                         <h1>in Marriage</h1>
@@ -80,7 +80,7 @@
                     </a>
                 </div>
                 <div class="blog2">
-                    <a href="fireBlogs3.html">
+                    <a href="MLblog3.html">
                     <div class="blogInfo">
                         <h1>Pursuing Intimacy</h1>
                         <h1>in Marriage</h1>
@@ -90,7 +90,7 @@
                     </a>
                 </div>
                 <div class="blog3">
-                    <a href="fireBlogs4.html">
+                    <a href="MLblog4.html">
                     <div class="blogInfo">
                         <h1>Walking in Love</h1>
                         <p>Practicing Selfless Love and Sacrifice in Marriage</p>
