Bottom Links Update
Bottom Links

--- a/Media.html
+++ b/Media.html
@@ -16,7 +16,8 @@
             <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
             </a>
         </div>
-    <h1>Media</h1>
+        <p>Media</p>
+    <h1>Moments and Memories</h1>
     </div>
 
     <div class="gallery">
@@ -35,10 +36,10 @@
               </div>
 
               <div class="news1">
-                <a href="galleryTwo.html">
+                <a href="galleryFour.html">
                 <div class="newsInfo">
-                  <h1>Encounter Retreat</h1>
-                  <p>November 2017</p>
+                  <h1>Life Class Encounter</h1>
+                  <p>August 2018</p>
                 </div>
                 </a>
               </div>
@@ -46,23 +47,26 @@
         </div>
         <div class="row2">
 
-          <div class="news">
-              <a href="galleryOne.html">
-              <div class="newsInfo">
-                <h1>Just the Two of us</h1>
-                <p>February 2019</p>
-              </div>
-              </a>
-            </div>
 
-            <div class="news1">
-              <a href="galle">
+            <div class="news">
+              <a href="galleryThree.html">
               <div class="newsInfo">
                 <h1>Youth Leadership Camp</h1>
                 <p>July 2018</p>
               </div>
               </a>
             </div>
+
+            <div class="news1">
+              <a href="galleryFour.html">
+              <div class="newsInfo">
+                <h1>Encounter Retreat</h1>
+                <p>November 2017</p>
+              </div>
+              </a>
+            </div>
+
+            
 
       </div>
     </div>
