--- a/galleryOne.html
+++ b/galleryOne.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gallery1.css">
     <link rel="stylesheet" href="lightbox.css">
-    <title>Married For Life</title>
+    <title>Just the Two of Us</title>
 </head>
 
     <div class="header">
