--- a/galleryTwo.html
+++ b/galleryTwo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gallery1.css">
     <link rel="stylesheet" href="lightbox.css">
-    <title>Married For Life</title>
+    <title>Encounter Retreat</title>
 </head>
 
     <div class="header2">
@@ -43,6 +43,90 @@
             </a>
             <a href="Gallery/Encounter Retreat/er8.jpg" data-lightbox="models" >
                 <img src="Gallery/Encounter Retreat/er8.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er9.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er9.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er10.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er10.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er11.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er11.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er12.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er12.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er13.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er13.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er14.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er14.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er15.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er15.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er16.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er16.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er17.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er17.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er18.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er18.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er19.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er19.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er20.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er20.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er21.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er21.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er22.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er22.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er23.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er23.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er24.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er24.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er25.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er25.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er26.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er26.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er27.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er27.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er28.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er28.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er29.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er29.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er30.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er30.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er31.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er31.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er32.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er32.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er33.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er33.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er34.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er34.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er35.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er35.jpg">
+            </a>
+            <a href="Gallery/Encounter Retreat/er36.jpg" data-lightbox="models" >
+                <img src="Gallery/Encounter Retreat/er36.jpg">
             </a>
         </div>
     </div>
