Mentoring Patch Notes
Breh

--- a/galleryFour.html
+++ b/galleryFour.html
@@ -129,9 +129,13 @@
             <a href="Gallery/Life Class Retreat/lc36.jpg" data-lightbox="models" >
                 <img src="Gallery/Life Class Retreat/lc36.jpg">
             </a>
-
+        </div>
     </div>
+
+    
     <script src="lightbox-plus-jquery.js"></script>
+
+    
 
 </body>
 </html>
