--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <nav class="navbar">
         <div class="content">
           <div class="logo">
-            <img src="HeadnFooter/logo.png" alt="">
+            <a href="index.html">
+              <img src="HeadnFooter/logo.png" alt="">
+            </a>
           </div>
           <ul class="menu-list">
             <div class="icon cancel-btn">
@@ -392,7 +394,7 @@
             <p class="noice">Equipping</p>
             <div class="links">
               <p><a href="Mentoring.html">Mentoring</a></p>
-              <p><a href="SOL Class">SOL Class</a></p>
+              <p><a href="SOLC">SOL Class</a></p>
               <p><a href="LifeClass.html">LifeClass</a></p>
             </div>
           </div>
