--- a/Spearhead.html
+++ b/Spearhead.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="content">
         <div class="logo">
-            <a href="index.html">
+            <a href="index.html#connects">
             <img src="HeadnFooter/logo.png" alt="">
             </a>
         </div>
@@ -153,7 +153,108 @@
       <h1>Be Notified</h1>
       <p>We are thrilled to invite you to subscribe to our church website in order to stay informed of all upcoming events, announcements, and notifications. Our website is the go-to source for all things related to our church, and we want to make sure that you never miss out on any important information.</p>
       <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
+    </div>
   </div>
+
+  <div class="bottomLinks">
+
+    <div class="firstGrid">
+      <img src="HeadnFooter/logo.png" alt="">
+      <h1><a href="">JGLWHM</a></h1>
+      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+    </div>
+  
+    
+    <div class="secondGrid">
+        <p>Connects</p>
+        <div class="botli">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+    </div>
+  
+    <div class="thirdGrid">
+      <p>Equipping</p>
+      <div class="botli">
+        <p><a href="Mentoring.html">Mentoring</a></p>
+        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="LifeClass.html">LifeClass</a></p>
+      </div>
+    </div>
+  
+    <div class="thirdGrid">
+      <p>Others</p>
+      <div class="botli">
+        <p><a href="Media.html">Media</a></p>
+        <p><a href="PrayerRequest.html">Prayer Request</a></p>
+        <p><a href="Announcement.html">Announcement</a></p>
+      </div>
+    </div>
+  
+    <div class="thirdGrid">
+      <p>Socials</p>
+      <div class="botli">
+        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+      </div>
+    </div>
+   
+  
+  </div>
+  
+  <div class="mobileLinks">
+    
+    <div class="first">
+      <div class="firstGrid">
+        <img src="HeadnFooter/logo.png" alt="">
+        <h1><a href="index.html">JGLWHM</a></h1>
+        <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+      </div>
+    </div>
+  
+    <div class="second">
+  
+      <div class="secondLane">
+        <p class="noice">Connects</p>
+        <div class="links">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+      </div>
+  
+      <div class="secondLane">
+        <p class="noice">Equipping</p>
+        <div class="links">
+          <p><a href="Mentoring.html">Mentoring</a></p>
+          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="LifeClass.html">LifeClass</a></p>
+        </div>
+      </div>
+  
+      <div class="secondLane">
+        <p class="noice">Others</p>
+        <div class="links">
+          <p><a href="Media.html">Media</a></p>
+          <p><a href="PrayerRequest.html">Prayer Request</a></p>
+          <p><a href="Announcement.html">Announcements</a></p>
+        </div>
+      </div>
+  
+      <div class="secondLane">
+        <p class="noice">Socials</p>
+        <div class="links">
+          <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+          <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+        </div>
+      </div>
+  
+    </div>
 </div>
 
 </body>
