--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -177,18 +177,121 @@
     <div class="prayerReq">
       <h1>Prayer Request</h1>
       <p>Prayer is an important part of our faith journey, and we believe that God hears and answers our prayers. If you have a specific prayer request, we would be honored to pray with you and for you.</p>
-      <button class="button"><span><h1>Pray with us </h1></span></button>
+      <a href="index.html#prayerRequest"><button class="button"><span><h1>Pray with us </h1></span></button></a>
     </div>
 
     <div class="announcement">
       <h1>Announcement</h1>
       <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
-      <button class="button"><span><h1>Be updated </h1></span></button>
+      <a href="Announcement.html"><button class="button"><span><h1>Be updated </h1></span></button></a>
     </div>
 
   </div>
 
 </section>
+
+<div class="bottomLinks">
+
+  <div class="firstGrid">
+    <img src="HeadnFooter/logo.png" alt="">
+    <h1><a href="">JGLWHM</a></h1>
+    <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+  </div>
+
+  
+  <div class="secondGrid">
+      <p>Connects</p>
+      <div class="botli">
+        <p><a href="Sundayservice.html">Sunday School</a></p>
+        <p><a href="Wildfire.html">Wildfire</a></p>
+        <p><a href="J12Kids.html">J12 Kids</a></p>
+        <p><a href="Spearhead.html">Spearhead</a></p>
+        <p><a href="Married4Life.html">Married for Life</a></p>
+      </div>
+  </div>
+
+  <div class="thirdGrid">
+    <p>Equipping</p>
+    <div class="botli">
+      <p><a href="Mentoring.html">Mentoring</a></p>
+      <p><a href="SOL Class">SOL Class</a></p>
+      <p><a href="LifeClass.html">LifeClass</a></p>
+    </div>
+  </div>
+
+  <div class="thirdGrid">
+    <p>Others</p>
+    <div class="botli">
+      <p><a href="Media.html">Media</a></p>
+      <p><a href="PrayerRequest.html">Prayer Request</a></p>
+      <p><a href="Announcement.html">Announcement</a></p>
+    </div>
+  </div>
+
+  <div class="thirdGrid">
+    <p>Socials</p>
+    <div class="botli">
+      <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+      <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+    </div>
+  </div>
+ 
+
+</div>
+
+<div class="mobileLinks">
+  
+  <div class="first">
+    <div class="firstGrid">
+      <img src="HeadnFooter/logo.png" alt="">
+      <h1><a href="index.html">JGLWHM</a></h1>
+      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+    </div>
+  </div>
+
+  <div class="second">
+
+    <div class="secondLane">
+      <p class="noice">Connects</p>
+      <div class="links">
+        <p><a href="Sundayservice.html">Sunday School</a></p>
+        <p><a href="Wildfire.html">Wildfire</a></p>
+        <p><a href="J12Kids.html">J12 Kids</a></p>
+        <p><a href="Spearhead.html">Spearhead</a></p>
+        <p><a href="Married4Life.html">Married for Life</a></p>
+      </div>
+    </div>
+
+    <div class="secondLane">
+      <p class="noice">Equipping</p>
+      <div class="links">
+        <p><a href="Mentoring.html">Mentoring</a></p>
+        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="LifeClass.html">LifeClass</a></p>
+      </div>
+    </div>
+
+    <div class="secondLane">
+      <p class="noice">Others</p>
+      <div class="links">
+        <p><a href="Media.html">Media</a></p>
+        <p><a href="PrayerRequest.html">Prayer Request</a></p>
+        <p><a href="Announcement.html">Announcements</a></p>
+      </div>
+    </div>
+
+    <div class="secondLane">
+      <p class="noice">Socials</p>
+      <div class="links">
+        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+      </div>
+    </div>
+
+  </div>
+
+
+</div>
 
 </body>
 </html>
