--- a/Archive5.html
+++ b/Archive5.html
@@ -62,7 +62,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
