--- a/Mentoring.html
+++ b/Mentoring.html
@@ -15,7 +15,7 @@
 
     <div class="bgweb">
         <div class="imageHolder">
-          <a href="index.html"><img src="HeadnFooter/logo.png" alt=""></a>
+          <a href="index.html#equipping"><img src="HeadnFooter/logo.png" alt=""></a>
         </div>
   
         <div class="plateName">
