--- a/Spearhead.html
+++ b/Spearhead.html
@@ -22,7 +22,7 @@
             <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
             </div>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#connects">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#sermons">Cell Leaders</a></li>
                 <li><a href="#blogss">Blogs</a></li>
@@ -232,7 +232,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
