--- a/Story3.html
+++ b/Story3.html
@@ -35,3 +35,111 @@
     <p>The king then had Daniel's accusers thrown into the lion's den, along with their wives and children, and the lions devoured them all. The king issued a decree that all the people in his kingdom should fear and reverence the God of Daniel, who is the living God and who endures forever.</p>
     <p>The story of Daniel and the Lion's Den is often seen as a testament to the power of faith and trust in God, even in the face of seemingly insurmountable challenges. Despite the king's decree and the danger he faced, Daniel remained faithful to God and was rewarded with God's protection and salvation. The story continues to inspire people to have courage and faith in the midst of difficult circumstances.</p>
 </div>
+
+<div class="bottomLinks">
+
+    <div class="firstGrid">
+      <img src="HeadnFooter/logo.png" alt="">
+      <h1><a href="">JGLWHM</a></h1>
+      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+    </div>
+
+    
+    <div class="secondGrid">
+        <p>Connects</p>
+        <div class="botli">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Equipping</p>
+      <div class="botli">
+        <p><a href="Mentoring.html">Mentoring</a></p>
+        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="LifeClass.html">LifeClass</a></p>
+      </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Others</p>
+      <div class="botli">
+        <p><a href="Media.html">Media</a></p>
+        <p><a href="PrayerRequest.html">Prayer Request</a></p>
+        <p><a href="Announcement.html">Announcement</a></p>
+      </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Socials</p>
+      <div class="botli">
+        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+      </div>
+    </div>
+   
+
+  </div>
+
+  <div class="mobileLinks">
+    
+    <div class="first">
+      <div class="firstGrid">
+        <img src="HeadnFooter/logo.png" alt="">
+        <h1><a href="index.html">JGLWHM</a></h1>
+        <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+      </div>
+    </div>
+
+    <div class="second">
+
+      <div class="secondLane">
+        <p class="noice">Connects</p>
+        <div class="links">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Equipping</p>
+        <div class="links">
+          <p><a href="Mentoring.html">Mentoring</a></p>
+          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="LifeClass.html">LifeClass</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Others</p>
+        <div class="links">
+          <p><a href="Media.html">Media</a></p>
+          <p><a href="PrayerRequest.html">Prayer Request</a></p>
+          <p><a href="Announcement.html">Announcements</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Socials</p>
+        <div class="links">
+          <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+          <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+
+
+</body>
+</html>
