--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <p class="noice">Equipping</p>
             <div class="links">
               <p><a href="Mentoring.html">Mentoring</a></p>
-              <p><a href="SOLC">SOL Class</a></p>
+              <p><a href="SOL.html">SOL Class</a></p>
               <p><a href="LifeClass.html">LifeClass</a></p>
             </div>
           </div>
