--- a/Archive1.html
+++ b/Archive1.html
@@ -115,7 +115,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html"">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
