--- a/Blog5.html
+++ b/Blog5.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
-    <link rel="stylesheet" href="Index.css">
     <title>Success</title>
 </head>
     <body>
@@ -58,7 +57,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -110,7 +109,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.css">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
