--- a/Married4Life.html
+++ b/Married4Life.html
@@ -22,7 +22,7 @@
                 <div class="icon cancel-btn">
                     <img src="HeadnFooter/menu.png" alt="">
                 </div>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#connects">Home</a></li>
                     <li><a href="#aboutus">About Us</a></li>
                     <li><a href="#blogs">Blogs</a></li>
                     <li><a href="#subscribe">Subscribe</a></li>
