--- a/Story2.html
+++ b/Story2.html
@@ -35,3 +35,109 @@
     <p>With this, David slung one of his stones at Goliath, hitting him in the forehead and causing him to fall to the ground. David then ran up to Goliath, took his own sword, and beheaded him. The Philistines, seeing that their champion had been defeated, fled from the battle, and the Israelites won a great victory.</p>
     <p>The story of David and Goliath is often seen as a symbol of how a small, seemingly weak person can overcome great obstacles through faith and courage. David, a humble shepherd boy, was able to defeat a mighty warrior because he had faith in God and the courage to stand up to him. This story has inspired countless people throughout history to face their own challenges with similar faith and courage.</p>
 </div>
+
+<div class="bottomLinks">
+
+    <div class="firstGrid">
+      <img src="HeadnFooter/logo.png" alt="">
+      <h1><a href="">JGLWHM</a></h1>
+      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+    </div>
+
+    
+    <div class="secondGrid">
+        <p>Connects</p>
+        <div class="botli">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Equipping</p>
+      <div class="botli">
+        <p><a href="Mentoring.html">Mentoring</a></p>
+        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="LifeClass.html">LifeClass</a></p>
+      </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Others</p>
+      <div class="botli">
+        <p><a href="Media.html">Media</a></p>
+        <p><a href="PrayerRequest.html">Prayer Request</a></p>
+        <p><a href="Announcement.html">Announcement</a></p>
+      </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Socials</p>
+      <div class="botli">
+        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+      </div>
+    </div>
+   
+
+  </div>
+
+  <div class="mobileLinks">
+    
+    <div class="first">
+      <div class="firstGrid">
+        <img src="HeadnFooter/logo.png" alt="">
+        <h1><a href="index.html">JGLWHM</a></h1>
+        <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+      </div>
+    </div>
+
+    <div class="second">
+
+      <div class="secondLane">
+        <p class="noice">Connects</p>
+        <div class="links">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Equipping</p>
+        <div class="links">
+          <p><a href="Mentoring.html">Mentoring</a></p>
+          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="LifeClass.html">LifeClass</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Others</p>
+        <div class="links">
+          <p><a href="Media.html">Media</a></p>
+          <p><a href="PrayerRequest.html">Prayer Request</a></p>
+          <p><a href="Announcement.html">Announcements</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Socials</p>
+        <div class="links">
+          <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+          <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+</body>
+</html>
