--- a/Story5.html
+++ b/Story5.html
@@ -34,3 +34,113 @@
     <p>The people were amazed by what they had witnessed. They recognized that this was a sign of God's power and that Jesus was a prophet sent from God. They wanted to make him their king and overthrow the Roman occupation, but Jesus withdrew from them and went up into the mountains to pray.</p>
     <p>This miracle of the feeding of the 5000 is often seen as a symbol of the abundance and generosity of God's provision. Despite the apparent lack of resources, Jesus was able to provide for the needs of the people through a miraculous act of multiplication. It also teaches us the importance of trusting in God's provision and sharing what we have with those in need.</p>
 </div>
+
+<div class="bottomLinks">
+
+    <div class="firstGrid">
+      <img src="HeadnFooter/logo.png" alt="">
+      <h1><a href="">JGLWHM</a></h1>
+      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+    </div>
+
+    
+    <div class="secondGrid">
+        <p>Connects</p>
+        <div class="botli">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Equipping</p>
+      <div class="botli">
+        <p><a href="Mentoring.html">Mentoring</a></p>
+        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="LifeClass.html">LifeClass</a></p>
+      </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Others</p>
+      <div class="botli">
+        <p><a href="Media.html">Media</a></p>
+        <p><a href="PrayerRequest.html">Prayer Request</a></p>
+        <p><a href="Announcement.html">Announcement</a></p>
+      </div>
+    </div>
+
+    <div class="thirdGrid">
+      <p>Socials</p>
+      <div class="botli">
+        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+      </div>
+    </div>
+   
+
+  </div>
+
+  <div class="mobileLinks">
+    
+    <div class="first">
+      <div class="firstGrid">
+        <img src="HeadnFooter/logo.png" alt="">
+        <h1><a href="index.html">JGLWHM</a></h1>
+        <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+      </div>
+    </div>
+
+    <div class="second">
+
+      <div class="secondLane">
+        <p class="noice">Connects</p>
+        <div class="links">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Equipping</p>
+        <div class="links">
+          <p><a href="Mentoring.html">Mentoring</a></p>
+          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="LifeClass.html">LifeClass</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Others</p>
+        <div class="links">
+          <p><a href="Media.html">Media</a></p>
+          <p><a href="PrayerRequest.html">Prayer Request</a></p>
+          <p><a href="Announcement.html">Announcements</a></p>
+        </div>
+      </div>
+
+      <div class="secondLane">
+        <p class="noice">Socials</p>
+        <div class="links">
+          <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+          <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+
+
+
+
+</body>
+</html>
