--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -13,14 +13,14 @@
   <section id="home">
     <nav class="navbar">
       <div class="content">
-        <a href="index.html">
+        <a href="index.html#connects">
           <img src="HeadnFooter/logo.png" alt="">
         </a>
         <ul class="menu-list">
           <div class="icon cancel-btn">
             <img src="HeadnFooter/menu.png" alt="">
           </div>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#connects">Home</a></li>
           <li><a href="#aboutus">About Us</a></li>
           <li><a href="#sermons">Sermons</a></li>
           <li><a href="#subscribe">Subscribe</a></li>
