--- a/Wildfire.html
+++ b/Wildfire.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="content">
         <div class="logo">
-            <a href="index.html">
+            <a href="index.html#connects">
             <img src="HeadnFooter/logo.png" alt="">
             </a>
         </div>
@@ -22,7 +22,7 @@
             <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
             </div>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#connects">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#blogs">Blogs</a></li>
                 <li><a href="#subscribe">Subscribe</a></li>
