--- a/J12Kids.html
+++ b/J12Kids.html
@@ -25,7 +25,7 @@
                 <li><a href="index.html#connects">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#sermons">Teachers</a></li>
-                <li><a href="#stories">Stories</a></li>
+                <li><a href="#blogs">Stories</a></li>
                 <li><a href="PrayerRequest.html">Prayer Request</a></li>
                 <li><a href="Announcement.html">Announcements</a></li>
         </ul>
@@ -215,73 +215,65 @@
 
         </div>  
     </div>
-<section id="stories">
-    <div class="shortIntroduction">
-        <h1>Bible Children Stories!</h1>
-        <p>The bible has a lot of stories that are great and beautiful but the most important thing are these stories helps us to get to know what God is like, what we are like and the way God wants us to live. </p>
-    </div>
 
-    <div class="studiesSection">
-        <div class="oneRow">
-            <a href="Story1.html">
-            <div class="gnews1">
-                <img src="J12KidsIMGs/kidsandjesus.jpg" alt="">
-                <div class="textArea1">
-                  <p>Story</p>
-                  <h1>Why Jesus loves Children?</h1>
+    <section id="blogs">
+        <div class="desc">
+            <h1>Bible Children Stories!</h1>
+            <p>The bible has a lot of stories that are great and beautiful but the most important thing are these stories helps us to get to know what God is like, what we are like and the way God wants us to live. </p>
+        </div>  
+    
+        <div class="blogs">
+            <div class="column">
+              <h1>Latest Stories</h1>
+                <div class="blog">
+                    <a href="Story1.html">
+                    <div class="blogInfo">
+                        <h1>Why Jesus loves Children?</h1>
+                        <p>Story</p>
+                    </div>
+                    </a>
                 </div>
             </div>
-            </a>
-            <a href="Story2.html">
-            <div class="gnews1">
-                <img src="J12KidsIMGs/davidandgoliath.jpg" alt="">
-                <div class="textArea2">
-                  <p>Story</p>
-                  <h1>Story of David and Goliath</h1>
+            <div class="column2">
+                <h1>Past Stories</h1>
+                <div class="scroll">
+                  <div class="blog">
+                    <a href="Story2.html">
+                    <div class="blogInfo">
+                        <h1>Story of David and Goliath</h1>
+                        <p>Greatest Upset of them all</p>
+                    </div>
+                    </a>
+                  </div>
+                  <div class="blog2">
+                    <a href="Story3.html">
+                    <div class="blogInfo">
+                        <h1>Daniel and the Lion</h1>
+                        <p>Story</p>
+                    </div>
+                    </a>
+                  </div>
+                  <div class="blog3">
+                    <a href="Story4.html">
+                    <div class="blogInfo">
+                        <h1>Story of Creation</h1>
+                        <p>Story</p>
+                    </div>
+                    </a>
+                  </div>
+                  <div class="blog4">
+                    <a href="Story5.html">
+                    <div class="blogInfo">
+                        <h1>Jesus feeds 5000 Men</h1>
+                        <p>Story</p>
+                    </div>
+                    </a>
+                  </div>
                 </div>
-            </div>
-            </a>
-            <a href="Story3.html">
-            <div class="gnews1">
-                <img src="J12KidsIMGs/danielandtheLion.jpg" alt="">
-                <div class="textArea3">
-                  <p>Story</p>
-                  <h1>Daniel and the Lion</h1>
-                </div>
-            </div>
-            </a>
+          </div>
         </div>
-        <div class="oneRow">
-            <a href="Story4.html">
-            <div class="gnews1">
-                <img src="J12KidsIMGs/creation.jpg" alt="">
-                <div class="textArea4">
-                  <p>Story</p>
-                  <h1>Story of Creation</h1>
-                </div>
-            </div>
-            </a>
-            <a href="Story5.html">
-            <div class="gnews1">
-                <img src="J12KidsIMGs/jesusfeeds5000.jpeg" alt="">
-                <div class="textArea5">
-                  <p>Story</p>
-                  <h1>Jesus feeds 5000 Men</h1>
-                </div>
-            </div>
-            </a>
-            <a href="Story6.html">
-            <div class="gnews1">
-                <img src="J12KidsIMGs/lazarus.jpg" alt="">
-                <div class="textArea6">
-                  <p>Story</p>
-                  <h1>Lazarus</h1>
-                </div>
-            </div>
-            </a>
-        </div>
-    </div>
 </section>
+
     <div class="subs">
         <img src="SundaySchooltings/Subs.jpg" alt="">
         <div class="sText">
