--- a/Wildfire.html
+++ b/Wildfire.html
@@ -68,6 +68,7 @@
     
         <div class="blogs">
             <div class="column">
+              <h1>Latest Blog</h1>
                 <div class="blog">
                     <a href="fireBlogs1.html">
                     <div class="blogInfo">
@@ -78,32 +79,34 @@
                 </div>
             </div>
             <div class="column2">
-                <div class="blog">
+                <h1>Past Blogs</h1>
+                <div class="scroll">
+                  <div class="blog">
                     <a href="fireBlogs2.html">
                     <div class="blogInfo">
                         <h1>Relationship to God</h1>
                         <p>How can we strengthen our relationship with God?</p>
                     </div>
                     </a>
-                </div>
-                <div class="blog2">
+                  </div>
+                  <div class="blog2">
                     <a href="fireBlogs3.html">
                     <div class="blogInfo">
                         <h1>Resilience</h1>
                         <p>Developing Resilience</p>
                     </div>
                     </a>
-                </div>
-                <div class="blog3">
+                  </div>
+                  <div class="blog3">
                     <a href="fireBlogs4.html">
                     <div class="blogInfo">
                         <h1>How hard it is to forgive?</h1>
                         <p>Practicing Forgiveness</p>
                     </div>
                     </a>
+                  </div>
                 </div>
-            </div>
-            
+          </div>
         </div>
 </section>
 
