--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -37,12 +37,12 @@
 <section id="aboutus">
   <div class="banner">
     <p id="noice">Connects</p>
-    <h1>Sunday School</h1>
+    <h1>Sunday Service</h1>
   </div>
 
   <div class="container">
-    <h1>Welcome to our Sunday School!</h1>
-    <p>Our Sunday School is a time for our church community to come together to celebrate God's love and grace. We gather each week to sing hymns and worship songs, pray together, hear a relevant and inspiring message from the Bible, and participate in communion.</p>
+    <h1>Welcome to our Sunday Service!</h1>
+    <p>Our Sunday Service is a time for our church community to come together to celebrate God's love and grace. We gather each week to sing hymns and worship songs, pray together, hear a relevant and inspiring message from the Bible, and participate in communion.</p>
     <p id="shim">Our worship services are designed to be welcoming and inclusive, and all are invited to join us regardless of background or experience with church. We strive to create a warm and friendly atmosphere where everyone feels valued and loved.</p>
     <p id="shim">We would be honored to have you join us for our Sunday Worship Service and hope that you will find encouragement, inspiration, and community as we come together to worship God.</p>
   </div>
