--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
           <div class="sunday">
             <a href="Sundayservice.html">
             <div class="sundayDesc">
-              <h1>Sunday School</h1>
+              <h1>Sunday Service</h1>
               <h2>(For all ages)</h2>
-              <p>Welcome to Sunday School at Jesus the Great Light! We are excited to offer a place where children and adults can grow in their understanding of the Bible and deepen their relationship with Jesus Christ.</p>
+              <p>Welcome to Sunday Service at Jesus the Great Light! We are excited to offer a place where children and adults can grow in their understanding of the Bible and deepen their relationship with Jesus Christ.</p>
             </div>
             </a>
           </div>
@@ -330,7 +330,7 @@
         <div class="secondGrid">
             <p>Connects</p>
             <div class="botli">
-              <p><a href="Sundayservice.html">Sunday School</a></p>
+              <p><a href="Sundayservice.html">Sunday Service</a></p>
               <p><a href="Wildfire.html">Wildfire</a></p>
               <p><a href="J12Kids.html">J12 Kids</a></p>
               <p><a href="Spearhead.html">Spearhead</a></p>
@@ -342,7 +342,7 @@
           <p>Equipping</p>
           <div class="botli">
             <p><a href="Mentoring.html">Mentoring</a></p>
-            <p><a href="SOL Class">SOL Class</a></p>
+            <p><a href="SOL.html">SOL Class</a></p>
             <p><a href="LifeClass.html">LifeClass</a></p>
           </div>
         </div>
@@ -382,7 +382,7 @@
           <div class="secondLane">
             <p class="noice">Connects</p>
             <div class="links">
-              <p><a href="Sundayservice.html">Sunday School</a></p>
+              <p><a href="Sundayservice.html">Sunday Service</a></p>
               <p><a href="Wildfire.html">Wildfire</a></p>
               <p><a href="J12Kids.html">J12 Kids</a></p>
               <p><a href="Spearhead.html">Spearhead</a></p>
