--- a/Announcement.html
+++ b/Announcement.html
@@ -17,10 +17,10 @@
 		</div>
 
 		<aside class="sidebar">
-			<a href="index.html"><h3>JGLWHM</h3></a>
+			<h3>JGLWHM</h3>
 			
 			<nav class="menu">
-				<a href="#home" class="menu-item">Home</a>
+				<a href="index.html" class="menu-item">Home</a>
 				<a href="#sunday" class="menu-item">Sunday Service</a>
 				<a href="#wildfire" class="menu-item">Wildfire</a>
 				<a href="#j12kids" class="menu-item">J12 Kids</a>
