--- a/Spearhead.html
+++ b/Spearhead.html
@@ -45,7 +45,7 @@
 
   <div class="container">
     <h1>"Working season is not an obligation but a fulfilment of our life mission"</h1>
-    <p>Spearhead is an Adult Professional Ministry on our church designed to meet the unique spiritual and practical needs of working adults in the congregation. These individuals may be professionals in their fields or simply those who work outside the home and desire fellowship with others who are in a similar stage of life.</p>
+    <p>Spearhead is an Youth / Young Professional Ministry on our church designed to meet the unique spiritual and practical needs of working adults in the congregation. These individuals may be professionals in their fields or simply those who work outside the home and desire fellowship with others who are in a similar stage of life.</p>
   </div>
   
   <div class="container1">
