--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <a href="Spearhead.html">
             <div class="spearheadDesc">
               <h1>Spearhead</h1>
-              <h2>(Adults)</h2>
-              <p>Spearhead is a supportive community at JGLWHM that is designed to help working professionals grow in their faith and connect with other Christians who share similar life experiences. We understand that life can be hectic, and that's why we offer a range of programs and activities that cater to the needs of busy adults.</p>
+              <h2>(Young Proffesionals)</h2>
+              <p>Spearhead is a supportive community at JGLWHM that is designed to help working young professionals grow in their faith and connect with other Christians who share similar life experiences. We understand that life can be hectic, and that's why we offer a range of programs and activities that cater to the needs of busy adults.</p>
             </div>
             </a>
           </div>
